feat: replace soapclient with carbonio-mailbox-sdk (#32)
- Remove soapclient module codebase
- Added carbonio-mailbox-sdk 1.0.0 dependency in parent pom and core
- Properly registered UserManagementConfig and ServiceClient in Guice as providers
- Refactored config load logic and the ability to get it from resources
- Added logback on boot and replace printStrackTrace with logger
- Removed unused dependencies on THIRDPARTIES file
- Updated WSDL schema and SOAP requests on tests
 
Refs: UM-26

---------

Co-authored-by: Federico Rispo <federico.rispo@zextras.com>